--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "2.4",
         "mcamara/laravel-localization": "^1.6",
+        "hardevine/shoppingcart": "^2.9",
         "santigarcor/laratrust": "^6.3",
         "spatie/laravel-translatable": "^4.6"
     },
