change cart and add pages

--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,16 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5|^8.0",
+        "anlutro/l4-settings": "^1.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
+        "hardevine/shoppingcart": "^2.9",
         "intervention/image": "^2.5",
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
         "laravel/ui": "2.4",
         "mcamara/laravel-localization": "^1.6",
-        "hardevine/shoppingcart": "^2.9",
         "santigarcor/laratrust": "^6.3",
         "spatie/laravel-translatable": "^4.6"
     },
