--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "hardevine/shoppingcart": "^2.9",
         "intervention/image": "^2.5",
         "laravel/framework": "^7.29",
+        "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "laravel/ui": "2.4",
         "mcamara/laravel-localization": "^1.6",
