--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.2.5|^8.0",
         "akaunting/laravel-setting": "^1.2",
+        "amrshawky/laravel-currency": "^4.0",
         "anlutro/l4-settings": "^1.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
